# single_button_desktop_interface

./: CMakeLists.txt
extra/: ascii-art-2.txt  ascii-art.txt  ascii-text-art.txt
inc/: ANSI_colors.h  device.h  main.h  serial.h  socket.h
src/: device.c  main.c  serial.c  socket.c
